frontend/src/assets/style/main.scss
@import "_variables.scss";
@import "bootstrap/scss/bootstrap";


/*scrollbar - firefox*/
:root {
  scrollbar-color: #888 rgba(0, 0, 0, 0) !important;
  scrollbar-width: thin !important;
}

/*scrollbar - chrome */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

::-webkit-scrollbar-corner {
  background: rgba(0, 0, 0, 0);
}

body {
  background-color: var(--background-color-primary);
  color: var(--text-primary-color);
}

a {
  color: var(--link-color);
}

::marker {
  color: var(--text-primary-color);
}

.jumbotron {
  padding: 2rem 1rem;
  margin-bottom: 2rem;
  background-color: var(--background-color-primary);
  color: var(--text-primary-color);
  opacity: 0.7;
  border-radius: 0.3rem;

  @media (min-width: 576px) {
    padding: 4rem 2rem;
  }
}

.dropdown-menu {
  background-color: var(--topNavigationBarColor);
  border-color: var(--text-primary-color);

  .dropdown-item {
    color: var(--text-primary-color);
  }
}

.navbar-expand {
  flex-flow: wrap;
}

/* Buttons */
.btn {
  color: var(--text-primary-color);
  box-shadow: none !important;
  &:hover {
    color: var(--text-color-hover);
  }
}

.btn:focus {
  box-shadow: none !important;
}

.btn-primary {
  background-color: var(--primary-button) !important;
  border-width: 2px;
  border-color: var(--btn-border-color);

  &:hover {
    background-color: var(--primary-button-hovered) !important;
    border-color: var(--btn-border-color);
  }

  &:active {
    border-color: var(--btn-border-color) !important;
  }

  &:focus {
    border-color: var(--btn-border-color) !important;
    color: var(--text-color-hover) !important;
  }

  &:disabled, &.disabled:hover {
    color: var(--text-primary-color);
    background-color: var(--primary-button);
    border-color: var(--btn-border-color);

    &:hover {
      background-color: var(--primary-button-hovered);
      color: var(--text-color-hover);
    }

    &:focus {
      background-color: var(--primary-button-hovered);
    }
  }
}

.btn-secondary {
  background-color: var(--secondary-button);
  border-width: 2px;
  border-color: var(--btn-border-color);

  &:hover {
    background-color: var(--secondary-button-hovered);
    border-color: var(--btn-border-color);
  }

  &:active {
    border-color: var(--btn-border-color) !important;
  }

  &:focus {
    border-color: var(--btn-border-color) !important;
    color: var(--text-color-hover) !important;
  }

  &:disabled, &.disabled:hover {
    color: var(--text-primary-color);
    background-color: var(--secondary-button);
    border-color: var(--btn-border-color);

    &:hover {
      background-color: var(--secondary-button-hovered);
      color: var(--text-color-hover);
    }

    &:focus {
      background-color: var(--secondary-button-hovered);
    }
  }
}

/* Form-controls */
.form-control {
  background-color: var(--preparePageNotSelectedBackground);
  border-width: 2px;
  color: var(--text-primary-color);

  &:hover {
    border-color: var(--secondary-button);
  }

  &:focus {
    background-color: var(--textAreaColour);
    border-color: var(--primary-button);
    color: var(--text-primary-color);
    box-shadow: none !important;
  }

  &::placeholder {
    color: grey;
  }
}

.card {
  background-color: var(--landingPageCardsBackground);

  .card-subtitle {
    color: var(--text-primary-color);
  }
}

/* Modal */
.modal-content {
  background-color: var(--background-color-primary);
  color: var(--text-primary-color);
}

.modal-body {
  color: var(--text-primary-color);
}

/* Hint-Popover */
.popover {
  background-color: var(--background-color-primary);
}

.popover-header {
  background-color: var(--primary-button) !important;
}

.popover-body {
  color: var(--text-primary-color) !important;
}

